# ExoPIE

./: CITATION.cff  README.md  index.html  py-modindex.html  search.html  searchindex.js  setup.cfg
api/: my_package.example.add_one.html
demos/: blackbody.py  genUncertainties.py  pie_WASP43b.py  pie_leastsq.py
src/exopie/: blackbody.py  genUncertainties.py  pie_leastsq.py  transforms.py
tests/: pie_WASP43b.py  pie_test.py
