[metadata]
name = ExoPIE
version = 0.0.1
author = Kevin B. Stevenson
author_email = kbstevenson@gmail.com
description = Exoplanetary Infrared Excess
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/kevin218/ExoPIE
project_urls =
    Bug Tracker = https://github.com/kevin218/ExoPIE/issues
    Source Code = https://github.com/kevin218/ExoPIE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.8

# Example of how to add dependencies:
install_requires =
	exoMAST_Obs @ git+https://github.com/kevin218/exoMAST_Obs@main#egg=exoMASTObs
    importlib-metadata >= 2.0
	dynesty
	numpy
	matplotlib
	scipy

[options.packages.find]
where = src

[options.extras_require]
pandexo = 
  pandexo.engine
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
